--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "dependencies": {
     "babel": "^6.23.0",
     "jest": "^20.0.4",
-    "node-import": "^0.9.2"
+    "node-import": "^0.9.2",
+    "prettier": "^1.4.4"
   },
   "scripts": {
     "build": "babel src -d lib",
