First board manipulation

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
+    "babel-plugin-module-resolver": "^2.7.1",
     "babel-preset-env": "^1.5.2",
     "http-server": "^0.10.0"
   }
