--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,10 @@
 {
-  "presets": ["env"]
+  "presets": ["env"],
+  "plugins": [
+    ["module-resolver", {
+      "alias": {
+        "SRC": "./src"
+      }
+    }]
+  ]
 }
