--- a/package.json
+++ b/package.json
@@ -16,15 +16,16 @@
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
-    "jest": "^20.0.4",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.0.0",
-    "prettier": "^1.4.4",
     "babel-plugin-module-resolver": "^2.7.1",
     "babel-preset-env": "^1.5.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "http-server": "^0.10.0",
+    "jest": "^20.0.4",
+    "npm-run-all": "^4.0.2",
+    "prettier": "^1.4.4",
     "webpack": "^2.6.1",
     "webpack-dev-server": "^2.4.5"
   }
